--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Peter N. Dobbs<title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Welcome!</h1>
+<p>You've reached my personal page. I'm still working on building it. So please be patient :)</p>
 </body>
 </html>
