--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Peter N. Dobbs<title>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Peter's Personal Page">
+  <meta name="author" content="Peter N. Dobbs">
+
+  <title>Peter N. Dobbs<title>
+
 </head>
-<body>
-<h1>Welcome!</h1>
-<p>You've reached my personal page. I'm still working on building it. So please be patient :)</p>
+
+<body id="page-top">
+  <!-- Header -->
+  <header>
+    <div class="container">
+      <!-- <img src="img/logos/logo_light.png" alt="main logo" style="width:300px;"> -->
+      <h1>Welcome!</h1>
+    </div>
+  </header>
+  
+  <!-- About -->
+  <section id="about">
+    <div class="container">
+      <div class="row">
+        <div>
+          <h2>About</h2>
+          <p>You've reached my personal page. I'm still working on building it. So please be patient :)</p>
+        </div>
+      </div>
+  </section>
+
 </body>
 </html>
