forgot the end slash for title :A

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Peter's Personal Page">
   <meta name="author" content="Peter N. Dobbs">
 
-  <title>Peter N. Dobbs<title>
+  <title>Peter N. Dobbs</title>
 
 </head>
 
