--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <title>Peter N. Dobbs</title>
   
-  <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 
 </head>
 
