updating page with social media and projects sections

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <meta charset="utf-8">
@@ -8,8 +9,14 @@
   <meta name="author" content="Peter N. Dobbs">
 
   <title>Peter N. Dobbs</title>
-  
+
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+
+  <style>
+    .img:hover {
+      opacity: 0.7;
+    }
+  </style>
 
 </head>
 
@@ -17,11 +24,11 @@
   <!-- Header -->
   <header>
     <div class="container">
-      <!-- <img src="img/logos/logo_light.png" alt="main logo" style="width:300px;"> -->
+      <!-- <img src="assets/img/ZebraPack.JPG" alt="zebras" style="width:300px;" align="right"> -->
       <h1>Welcome!</h1>
     </div>
   </header>
-  
+
   <!-- About -->
   <section id="about">
     <div class="container">
@@ -29,9 +36,54 @@
         <div>
           <h2>About</h2>
           <p>You've reached my personal page. I'm still working on building it. So please be patient :)</p>
+          <h3>Social Media</h3>
+          <a href="https://www.linkedin.com/in/peternathanieldobbs/" class="img">
+            <img src="assets/img/logos/LI-In-Bug.png" alt="LinkedIn" style="width:70px">
+          </a>
+
+          <a href="https://github.com/peterdobbs77/" class="img">
+            <img src="assets/img/logos/GitHub-Mark-64px.png" alt="GitHub">
+          </a>
         </div>
       </div>
   </section>
 
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="content">
+      <hr>
+      <div class="row" id="emr6050">
+        <a href="https://emr6050.github.io" class="img">
+          <img src="assets/img/logos/emr6050_logo_light.png" alt="EMR6050" style="width:220px;">
+        </a>
+        <a href="https://github.com/emr6050" class="img">
+          <img src="assets/img/logos/GitHub-Mark-32px.png" alt="EMR6050" style="width:20px" align="right">
+        </a>
+        <p>
+          A suite of cloud-based tools to meet the technical needs of a new behavioral health clinic.
+          All instances and data are hosted on AWS. This project is on-going as a part of my Master's thesis project.
+        </p>
+      </div>
+      <hr>
+      <div class="row" id="greatlakessiim">
+        <a href="https://greatlakessiim.github.io" class="img">
+          <img src="assets/img/logos/teamgreatlakes2.png" alt="TeamGreatLakes" style="width:150px;">
+        </a>
+        <a href="https://github.com/greatlakessiim" class="img">
+          <img src="assets/img/logos/GitHub-Mark-32px.png" alt="TeamGreatLakes" style="width:20px" align="right">
+        </a>
+        <p>
+
+        </p>
+      </div>
+      <hr>
+    </div>
+  </section>
+
+  <section id="extracurriculars">
+
+  </section>
+
 </body>
+
 </html>
