--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     .img:hover {
       opacity: 0.7;
     }
+
+    body {
+      background-color: #d9e6f3;
+    }
   </style>
 
 </head>
@@ -67,7 +71,7 @@
       <hr>
       <div class="row" id="greatlakessiim">
         <a href="https://greatlakessiim.github.io" class="img">
-          <img src="assets/img/logos/teamgreatlakes2.png" alt="TeamGreatLakes" style="width:150px;">
+          <img src="assets/img/logos/teamgreatlakes3.png" alt="TeamGreatLakes" style="width:150px;">
         </a>
         <a href="https://github.com/greatlakessiim" class="img">
           <img src="assets/img/logos/GitHub-Mark-32px.png" alt="TeamGreatLakes" style="width:20px" align="right">
