adding reference to rwanda blog

--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
           <h2>About</h2>
           <p>You've reached my personal page. I'm still working on building it. So please be patient :)</p>
           <h3>Social Media</h3>
+          <a href="https://github.com/peterdobbs77/" class="img">
+            <img src="assets/img/logos/GitHub-Mark-64px.png" alt="GitHub" style="width:70px">
+          </a>&nbsp;
+          <a href="https://wanderrwanda.blogspot.com/" class="img">
+            <img src="assets/img/logos/Blogger.png" alt="Blogger" style="width:70px">
+          </a>&nbsp;
           <a href="https://www.linkedin.com/in/peternathanieldobbs/" class="img">
             <img src="assets/img/logos/LI-In-Bug.png" alt="LinkedIn" style="width:70px">
-          </a>
-
-          <a href="https://github.com/peterdobbs77/" class="img">
-            <img src="assets/img/logos/GitHub-Mark-64px.png" alt="GitHub">
-          </a>
+          </a>&nbsp;
         </div>
       </div>
   </section>
