formatting and cleaning up folders

--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
   <!-- Header -->
   <header class="masthead">
     <div class="container">
+      <div class="intro-text">
+      </div>
     </div>
   </header>
 
   <section id="social">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12">
+        <div class="col">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="assets/img/headshot.jpg" alt="me">
             <h3>Peter N. Dobbs</h3>
@@ -74,7 +76,12 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">About</h2>
+          <h2 class="section-heading text-uppercase">Greetings</h2>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-12 text-center">
           <p>You've reached my personal page. I'm still working on building it. So please be patient :)</p>
         </div>
       </div>
@@ -93,7 +100,7 @@
           <img src="assets/img/logos/emr6050_logo_light.png" alt="EMR6050" style="width:220px;">
         </a>
         <a href="https://github.com/emr6050" class="link-img">
-          <img src="assets/img/logos/GitHub-Mark-32px.png" alt="EMR6050" style="width:20px" align="right">
+          <i class="fa fa-github"></i>
         </a>
         <p>
           A suite of cloud-based tools to meet the technical needs of a new behavioral health clinic. All instances and
@@ -109,7 +116,7 @@
           <img src="assets/img/logos/teamgreatlakes3.png" alt="TeamGreatLakes" style="width:150px;">
         </a>
         <a href="https://github.com/greatlakessiim" class="link-img">
-          <img src="assets/img/logos/GitHub-Mark-32px.png" alt="TeamGreatLakes" style="width:20px" align="right">
+          <i class="fa fa-github"></i>
         </a>
         <p>
           I was the team lead for a group of developers that participated in the 2018 and 2019 SIIM Hackathons. Click on
