working on style and travel section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 
-  <link href="css/agency.min.css" rel="stylesheet">
+  <link href="css/agency.css" rel="stylesheet">
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -33,6 +33,33 @@
 </head>
 
 <body id="page-top">
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Peter N. Dobbs</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <!-- Menu -->
+        <i class="fa fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav text-uppercase ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#profile">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#proj-orgs">Projects</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <!-- Header -->
   <header class="masthead">
     <div class="container">
@@ -41,7 +68,8 @@
     </div>
   </header>
 
-  <section id="social">
+  <!-- Profile -->
+  <section id="profile">
     <div class="container">
       <div class="row">
         <div class="col">
@@ -79,7 +107,6 @@
           <h2 class="section-heading text-uppercase">Greetings</h2>
         </div>
       </div>
-
       <div class="row">
         <div class="col-lg-12 text-center">
           <p>You've reached my personal page. I'm still working on building it. So please be patient :)</p>
@@ -88,11 +115,12 @@
     </div>
   </section>
 
-  <section id="organizations">
+  <!-- Projects/Organizations -->
+  <section id="proj-orgs">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Organizations</h2>
+          <h2 class="section-heading text-uppercase">Projects</h2>
         </div>
       </div>
       <div class="row" id="emr6050">
@@ -131,6 +159,17 @@
   <!-- <section id="extracurriculars">
 
   </section> -->
+
+  <section id="travel">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Travel</h2>
+          <img src="assets/img/travel-banner.jpg" style="width:100%">
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section id="other-social">
     <div class="container">
