--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <p>You've reached my personal page. I'm still working on building it. So please be patient :)</p>
+          <p>In the mean time you can view my CV here:
+            <a href="assets/PeterDobbs_cv.pdf">
+              <i class="fa fa-file-pdf-o"></i>
+            </a>
+          </p>
         </div>
       </div>
     </div>
