adding social media button for twitter

--- a/index.html
+++ b/index.html
@@ -187,6 +187,11 @@
                 <i class="fa fa-instagram"></i>
               </a>
             </li>
+            <li class="list-inline-item">
+              <a href="https://www.twitter.com/peetahdobbs/">
+                <i class="fa fa-twitter"></i>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
