adding to travel section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href="css/agency.css" rel="stylesheet">
+  <link href="css/theme.css" rel="stylesheet">
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -52,6 +52,12 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#proj-orgs">Projects</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#travel">Travel</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#mentions">Mentions</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -66,7 +72,7 @@
   </header>
 
   <!-- Profile -->
-  <section id="profile">
+  <section class="bg-light" id="profile">
     <div class="container">
       <div class="row">
         <div class="col">
@@ -85,8 +91,8 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://wanderrwanda.blogspot.com/">
-                  <i class="fa fa-book"></i>
+                <a href="https://www.twitter.com/peetahdobbs/">
+                  <i class="fa fa-twitter"></i>
                 </a>
               </li>
             </ul>
@@ -118,11 +124,11 @@
   </section>
 
   <!-- Projects/Organizations -->
-  <section id="proj-orgs">
+  <section class="bg-light" id="proj-orgs">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Projects</h2>
+          <h3 class="section-heading text-uppercase">Projects</h3>
         </div>
       </div>
       <div class="row" id="emr6050">
@@ -150,10 +156,9 @@
         </a>
         <p>
           I was the team lead for a group of developers that participated in the 2018 and 2019 SIIM Hackathons. Click on
-          the logos above for more information.
+          the logo above for more information.
         </p>
       </div>
-      <hr>
     </div>
     </div>
   </section>
@@ -166,18 +171,49 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h3 class="section-heading">Travel</h3>
+          <h3 class="section-heading text-uppercase">Travel</h3>
           <img src="assets/img/travel-banner.jpg" style="width:100%">
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <p>
+          I am honored to be an alumnus of the Engineering World Health Summer Institutes. Since being a program
+          participant in 2016, I have been contracted by them twice as an On the Ground Coordinator - once in Rwanda and
+          once in Uganda. I am not currently employed by EWH but I will always carry the memories in my heart.
+        </p>
+        <p>
+          While abroad, I documented my experiences in the form of a travel blog. I have added to it since my trips to
+          share updates and any talks I have given on my experiences. You can access my writing by clicking the below.
+          I'm alw3ays excited to share stories and lessons from my time in East Africa. Feel free to contact me with any
+          questions or speaking opportunities.
+        </p>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h5 class="section-heading">Travel Blog</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <ul class="list-inline social-buttons">
+            <li class="list-inline-item">
+              <a href="https://wanderrwanda.blogspot.com/">
+                <i class="fa fa-book"></i>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="mentions">
+  <section class="bg-light" id="mentions">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
-          <h3 class="section-heading">Mentions</h3>
+        <div class="col-lg-12">
+          <h3 class="section-heading">External Mentions</h3>
         </div>
       </div>
       <div class="row">
@@ -187,6 +223,17 @@
               Event details
             </a> for Peter's talk "Nyandwi Muzungu: Medical Device Repair in Constrained Environments" as
             part of the Global Innovation Seminar Series
+          </li>
+          <li>
+            <a href="https://emr6050.net/#team">
+              EMR6050 - Our Amazing Team
+            </a> shows Peter as principal member of the project team
+          </li>
+          <li>
+            <a
+              href="https://play.usaultimate.org/teams/events/Eventteam/?TeamId=Mt%2B%2FvUJUCoZN9dEQJBCaYRlAYdFLGaegq66I12ndfBY%3D">
+              Marquette (Birdhouse) 2018 Roster
+            </a> Peter "Dobby" Dobbs (#77)
           </li>
           <li>
             <a href="https://www.ewh.org/blog-posts/introducing-the-2018-summer-institute-coordinators/">
@@ -203,27 +250,15 @@
     </div>
   </section>
 
-  <section id="other-social">
+  <footer class="bg-dark">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
-          <h3 class="section-heading">Other Social Media</h3>
-          <ul class="list-inline social-buttons">
-            <li class="list-inline-item">
-              <a href="https://www.instagram.com/peetahdobbs/">
-                <i class="fa fa-instagram"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.twitter.com/peetahdobbs/">
-                <i class="fa fa-twitter"></i>
-              </a>
-            </li>
-          </ul>
+        <div class="col-md-12 text-center">
+          <a href="#"><img src="assets/img/logos/pnd.png"></a>
         </div>
       </div>
     </div>
-  </section>
+  </footer>
 
 </body>
 
