--- a/index.html
+++ b/index.html
@@ -140,10 +140,7 @@
         </a>
         <p>
           A suite of cloud-based tools to meet the technical needs of a new behavioral health clinic. All instances and
-          data are hosted on AWS.
-        </p>
-        <p>
-          This project is on-going as a part of my Master's thesis project.
+          data are hosted on AWS. This project is on-going as a part of my Master's thesis project.
         </p>
       </div>
       <hr>
