adding specifics on TeamGreatLakes projects

--- a/index.html
+++ b/index.html
@@ -155,6 +155,24 @@
           I was the team lead for a group of developers that participated in the 2018 and 2019 SIIM Hackathons. Click on
           the logo above for more information.
         </p>
+        <p>
+          I presented on the following projects during the SIIM Hackathon Showcase
+        </p>
+        <ul>
+          <li> (2019)
+            <a href="https://peterdobbs.shinyapps.io/FormsOnFHIR/">
+              Shiny Forms on FHIR
+            </a> Enables radiologists and developers to create a variety of FHIR Resources and submit them to a live
+            FHIR server.
+          </li>
+          <li> (2018)
+            <a href="https://github.com/GreatLakesSIIM/synoptic-reporting">
+              Synoptic Reporting as an Enabler
+            </a> Displays a RadReport<a href="https://radreport.org/"><i class="fa fa-external-link"></i></a>
+            Template for completion by a radiologist and converts the input into a FHIR Resource that can be submitted
+            to a live FHIR server.
+          </li>
+        </ul>
       </div>
     </div>
     </div>
