--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <meta name="description" content="Peter's Personal Page">
   <meta name="author" content="Peter N. Dobbs">
 
+  <meta property="og:title" content="Peter N. Dobbs">
+  <meta property="og:description" content="Peter's Personal Page">
+  <meta property="og:image" content="assets/img/header-bg.jpg">
+  <meta property="og:url" content="https://peterdobbs77.github.io/">
+  <meta property="twitter:card" content="summary_large_image">
+
   <title>Peter N. Dobbs</title>
 
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
