updating some formatting

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Peter N. Dobbs">
 
   <!-- tags for sharing on social media -->
-  <meta property="twitter:card" content="summary">
+  <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:creator" content="@peetahdobbs">
   <meta property="og:title" content="Peter N. Dobbs">
   <meta property="og:description" content="Peter's Personal Page">
@@ -120,8 +120,8 @@
       </div>
       <div class="row">
         <div class="col-lg-12 text-center">
-          <p>You've reached my personal page. I'm still working on building it. So please be patient :)</p>
-          <p>In the mean time you can view my CV here:
+          <p>You've reached my personal page. I'm always working on expanding it. So visit often! :)</p>
+          <p>You can find my CV here:
             <a href="assets/PeterDobbs_cv.pdf">
               <i class="fa fa-file-pdf-o"></i>
             </a>
