--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="twitter:creator" content="@peetahdobbs">
   <meta property="og:title" content="Peter N. Dobbs">
   <meta property="og:description" content="Peter's Personal Page">
-  <meta property="og:image" content="assets/img/header-bg.jpg">
+  <meta property="og:image" content="https://peterdobbs77.github.io/assets/img/logos/pnd.jpg">
   <meta property="og:url" content="https://peterdobbs77.github.io/">
 
   <title>Peter N. Dobbs</title>
