--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Peter's Personal Page">
   <meta name="author" content="Peter N. Dobbs">
 
