--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="Peter N. Dobbs">
   <meta property="og:description" content="Peter's Personal Page">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://peterdobbs77.github.io/assets/img/logos/pnd.jpg">
+  <meta property="og:image" content="https://peterdobbs77.github.io/assets/img/pnd.png">
   <meta property="og:url" content="https://peterdobbs77.github.io/">
 
   <title>Peter N. Dobbs</title>
