--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           <p>
             While abroad, I documented my experiences in the form of a travel blog. I have added to it since my trips to
             share updates and any talks I have given on my experiences. You can access my writing by clicking the below.
-            I'm alw3ays excited to share stories and lessons from my time in East Africa. Feel free to contact me with
+            I'm always excited to share stories and lessons from my time in East Africa. Feel free to contact me with
             any
             questions or speaking opportunities.
           </p>
