--- a/index.html
+++ b/index.html
@@ -312,8 +312,13 @@
           <p><b>Spring 2019</b>
             <ul>
               <li>
-                Peter built a prototype solution for documenting patient encounters at a recently funded mental health
+                Built a prototype solution for documenting patient encounters at a recently funded mental health
                 clinic in Milwaukee, WI. (<a href="https://emr6050.github.io/">EMR6050</a>)
+              </li>
+              <li>
+                Gave a presentation to the students at Milwaukee School of Languages on scholastic and professional
+                opportunities in the STEM field from the lense of a current graduate student who had global internship
+                experiences.
               </li>
               <li>
                 Peter plays his third season for Marquette's D1 Ultimate Frisbee team, Birdhouse. <a
