--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a class="nav-link js-scroll-trigger" href="#travel">Travel</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#mentions">Mentions</a>
+            <a class="nav-link js-scroll-trigger" href="#news">News</a>
           </li>
         </ul>
       </div>
@@ -263,7 +263,7 @@
     </div>
   </section>
 
-  <section id="mentions">
+  <section id="news">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -279,7 +279,8 @@
                   href="https://twitter.com/birdhousemu">@BirdhouseMU</a>)
               </li>
               <li>
-                Classes started up for the Spring semester.
+                Classes started up for the Spring semester, enrolled in (Statistical) Simulation and Applied
+                Mathematical Analysis.
               </li>
             </ul>
           </p>
@@ -296,7 +297,7 @@
           <p><b>Summer 2019</b>
             <ul>
               <li>
-                Peter traveled to Denver, Colorada to attend the Society of Imaging Informatics in Medicine (SIIM)
+                Traveled to Denver, Colorada to attend the Society of Imaging Informatics in Medicine (SIIM)
                 Annual Meeting and compete in the hackathon. For the second year in a row, he led a team of students
                 from the Great Lakes region, known as <a href="https://greatlakessiim.github.io">Team Great
                   Lakes</a> (TGL). TGL placed third overall with one of its projects and won the popular vote
@@ -316,8 +317,8 @@
                 clinic in Milwaukee, WI. (<a href="https://emr6050.github.io/">EMR6050</a>)
               </li>
               <li>
-                Gave a presentation to the students at Milwaukee School of Languages on scholastic and professional
-                opportunities in the STEM field from the lense of a current graduate student who had global internship
+                Spoke to students at Milwaukee School of Languages on scholastic and professional opportunities in
+                the STEM field from the lense of a current graduate student who had global technical internship
                 experiences.
               </li>
               <li>
@@ -331,7 +332,8 @@
           <p><b>Fall 2018</b>
             <ul>
               <li>
-                Peter began graduate studies at Marquette University, under the support of the GasDay Lab.
+                Begins graduate studies at Marquette University, under the support of the GasDay Lab, taking courses on
+                Healthcare Quality, Data Ethics, and Business Intelligence.
               </li>
             </ul>
           </p>
