--- a/index.html
+++ b/index.html
@@ -301,9 +301,7 @@
                 Annual Meeting and compete in the hackathon. For the second year in a row, he led a team of students
                 from the Great Lakes region, known as <a href="https://greatlakessiim.github.io">Team Great
                   Lakes</a> (TGL). TGL placed third overall with one of its projects and won the popular vote
-                with another. Peter appears in subsequent SIIM promotional materials:
-                <a href="https://youtu.be/ng3Yq-rI_hU">SIIM Attendee Video FINAL</a>,
-                <a href="https://youtu.be/h9mHDw6JV2Q">2019 SIIM Hackathon Highlights</a>
+                with another. Peter has appeared in numerous subsequent SIIM promotional materials.
               </li>
               <li>
                 Peter helped startup and was elected Captain of a new Ultimate Frisbee team in Milwaukee, WI - <a
