--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
           <p><b>Spring 2020</b>
             <ul>
               <li>
-                Peter plays his fourth season for Marquette's D1 Ultimate Frisbee team, Birdhouse. (<a
-                  href="https://twitter.com/birdhousemu">@BirdhouseMU</a>)
+                Peter's fourth season of college ultimate is cancelled (perhaps postponed?) due to the COVID-19
+                pandemic. Though, practices were held up until Marquette University's spring break.
               </li>
               <li>
                 Classes started up for the Spring semester, enrolled in (Statistical) Simulation and Applied
@@ -322,7 +322,8 @@
                 experiences.
               </li>
               <li>
-                Peter plays his third season for Marquette's D1 Ultimate Frisbee team, Birdhouse. <a
+                Peter plays his third season for Marquette's D1 Ultimate Frisbee team, Birdhouse. (<a
+                  href="https://twitter.com/birdhousemu">@BirdhouseMU</a>) <a
                   href="https://play.usaultimate.org/teams/events/Eventteam/?TeamId=Mt%2B%2FvUJUCoZN9dEQJBCaYRlAYdFLGaegq66I12ndfBY%3D">
                   Marquette (Birdhouse) 2018 Roster
                 </a> Peter Dobbs (#77)
