updating new section
finally getting around to adding updates to the news section from the past year

--- a/index.html
+++ b/index.html
@@ -272,6 +272,44 @@
       </div>
       <div class="row">
         <div class="col">
+          <p><b>Fall 2021</b>
+            <ul>
+              <li>
+                Participates in <a href="https://confluence.hl7.org/pages/viewpage.action?pageId=118981120#id-202109Connectathon28-VirtualHL7FHIRCONNECTATHON28">
+                FHIR Connectathon 28</a>, Imaging track
+              </li>
+            </ul>
+          </p>
+          <p><b>Summer 2021</b>
+            <ul>
+              <li>
+                Earned Certified Scrum Product Owner (CSPO) certification
+              </li>
+            </ul>
+          </p>
+          <p><b>Spring 2021</b>
+            <ul>
+              <li>
+                Participates in <a href="https://confluence.hl7.org/pages/viewpage.action?pageId=104568828#id-202105Connectathon27-VirtualHL7FHIRCONNECTATHON27">
+                FHIR Connectathon 27</a>, FHIRcast track
+              </li>
+            </ul>
+          </p>
+          <p><b>Fall/Winter 2020</b>
+            <ul>
+              <li>
+                Peter officially moves from Milwaukee to Minneapolis (yay!)
+              </li>
+            </ul>
+          </p>
+          <p><b>Summer 2020</b>
+            <ul>
+              <li>
+                Peter accepts offer from Vital Images, Inc (Canon Medical Systems), joins development effort for
+                Vitrea Intelligence
+              </li>
+            </ul>
+          </p>
           <p><b>Spring 2020</b>
             <ul>
               <li>
@@ -280,7 +318,8 @@
               </li>
               <li>
                 Classes started up for the Spring semester, enrolled in (Statistical) Simulation and Applied
-                Mathematical Analysis.
+                Mathematical Analysis. Due to the COVID-19 pandemic, the courses switch to online following 
+                spring break.
               </li>
             </ul>
           </p>
